--- a/assets/styles/stylesheet.css
+++ b/assets/styles/stylesheet.css
@@ -102,6 +102,7 @@ body {
 #about_fields {
 	margin-bottom: 1rem;
 	padding: 2px;
+
 	/*background-color: green;*/
 }
 .about-field {
@@ -128,7 +129,11 @@ body {
 	color: rgba(136,153,165,0.9);
 }
 .field-icon {
-	letter-spacing: .2em;
+	/*letter-spacing: .2em;*/
+	width: 1.5rem;
+	font-size: 1em;
+	text-align: center;
+	/*background-color: green;*/
 }
 .waifu {
 	width: 25px;
@@ -322,7 +327,7 @@ body {
 	color: rgba(136,153,165,0.9);
 }
 .lf-handle-icon {
-	letter-spacing: .2em;
+	/*letter-spacing: .2em;*/
 }
 h1 {
 	vertical-align: center;
