--- a/assets/styles/stylesheet.css
+++ b/assets/styles/stylesheet.css
@@ -18,6 +18,20 @@ body {
 	font-weight: 100;
 }
 
+/*====================
+	typography 
+	====================*/
+
+/*====================
+	componenets  
+	====================*/
+
+/*====================
+	layout
+	====================*/
+
+
+
 /* Profile Bio ======================*/
 #bio {
 	margin-bottom: 1rem;
