--- a/assets/styles/stylesheet.css
+++ b/assets/styles/stylesheet.css
@@ -275,7 +275,6 @@ body {
 	display: inline-block;  
 	width: 30%;
 	margin-right: 1em;
-	padding: 5px;
 	flex: 0 0 auto;
 }
 
@@ -583,7 +582,7 @@ h4 {
 	.scrolling-tiled-list > .tile {
 		width: 100%;
 		display: block;
-		padding: 0;
+		margin: 0;
 	}
 	.tiled-list {
 		width: 100%;
