scrolling watch items adjustment

--- a/assets/styles/stylesheet.css
+++ b/assets/styles/stylesheet.css
@@ -273,7 +273,7 @@ body {
 }
 .scrolling-tiled-list > .tile {
 	display: inline-block;  
-	width: 30%;
+	width: 36%;
 	margin-right: 1em;
 	flex: 0 0 auto;
 }
@@ -583,6 +583,7 @@ h4 {
 		width: 100%;
 		display: block;
 		margin: 0;
+		padding: 0;
 	}
 	.tiled-list {
 		width: 100%;
