Implemented show more EDs

--- a/assets/styles/stylesheet.css
+++ b/assets/styles/stylesheet.css
@@ -413,6 +413,9 @@ body {
 .more-video-item-op {
 	display: none;
 }
+.more-video-item-ed {
+	display: none;
+}
 
 /*	============================================
 	Likes And Follows Tab
