--- a/assets/styles/stylesheet.css
+++ b/assets/styles/stylesheet.css
@@ -71,7 +71,7 @@ body {
 	align-items: center;
 	margin-bottom: 1em;
 	padding: 1em 0;
-	border-top: 1px;
+	/*border-top: 1px;*/
 	border-bottom: 1px;
 	border-style: solid;
 	border-color: rgba(136,153,165,0.3); /*#21202A*/
