--- a/assets/styles/stylesheet.css
+++ b/assets/styles/stylesheet.css
@@ -50,7 +50,7 @@ body {
 	z-index: 10;
 	width: 100%;
 	align-self: end;
-	padding-bottom: 6rem;
+	padding-bottom: 8vh;
 	text-align: center;
 	font-family: 'Carter One', cursive;
 	font-size: 8vh;
